# feature-selection

./: CMakeLists.txt  README.md  TODO  build_index.cpp  calc_recall.py  calc_recall_alt.py  count_groups.py  divide.py  find_max_f.py  fs.cpp  fs_parallel.cpp  merge_index.cpp  merge_recall.py  merge_recall_alt.py  permute.py  query.py  query_index.cpp  recall.py  recall_original.py  recall_th.py  run_all.sh  run_query.sh  run_recall.sh  run_recall_alt.sh  run_test.sh
FastEMD/: EMD_DEFS.hpp  emd_hat.hpp
PCA/: calc_pca.sh  cv_keypoints  keypoints  match  recalckeys
RubnerEMD/: emd.cpp  emd.hpp
