cmake_minimum_required(VERSION 2.8)
project(feature-selection)
find_package(OpenCV REQUIRED)
find_package(Boost COMPONENTS system filesystem REQUIRED)
include_directories("./RubnerEMD" "./FastEMD" "./PCA")
add_executable(fs fs.cpp RubnerEMD/emd.cpp)
target_link_libraries(fs ${OpenCV_LIBS} ${Boost_LIBRARIES})
add_executable(fs_parallel fs_parallel.cpp RubnerEMD/emd.cpp)
target_link_libraries(fs_parallel ${OpenCV_LIBS} ${Boost_LIBRARIES})