cmake_minimum_required(VERSION 2.8)
project(feature-selection)
find_package(OpenCV REQUIRED)
find_package(Boost COMPONENTS system filesystem REQUIRED)
include_directories("./RubnerEMD" "./FastEMD" "./PCA")
add_executable(build_index build_index.cpp RubnerEMD/emd.cpp)
target_link_libraries(build_index ${OpenCV_LIBS} ${Boost_LIBRARIES})
add_executable(query_index query_index.cpp RubnerEMD/emd.cpp)
target_link_libraries(query_index ${OpenCV_LIBS} ${Boost_LIBRARIES})
add_executable(merge_index merge_index.cpp RubnerEMD/emd.cpp)
target_link_libraries(merge_index ${OpenCV_LIBS} ${Boost_LIBRARIES})